	enclosing sphere. GPVAL_VIEW_XCENT GPVAL_VIEW_YCENT GPVAL_VIEW_RADIUS.

	* src/graphics.c (place_objects):  Allow placement and size of circles
	in 3D plot to use axis coordinates (used to only allow screen coords).
	As in 2D, the radius of the circle is always scaled to match the x axis
	and the circle itself is always drawn in the plane of the figure.

2017-04-01  Ethan A Merritt  <merritt@u.washington.edu>

	* src/mouse.c term/qt.trm src/qtterminal/qt_term.cpp
	src/qtterminal/QtGnuplotWindow.cpp: The qt terminal assumed that
	"space-raises-console" would be implemented in the core code.
	But it never was.  Instead on non-MSWin platforms hitting <space>
	in the qt window generates a mouse protocol error.
	Document that "space-raises-console" is only for MSWin, and have
	other platforms treat it like any other key.

2017-04-01  Daniel J Sebald <daniel.sebald@ieee.org>

	* src/plot.c (main):  Exit with error if dropping privilege fails.

2017-03-31  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graph3d.c (do_3dplot):  "set xyplane at 0; set log z; splot..." =>
	no plot drawn.  Change this so that "at 0" for logscale z is treated as
	"xyplane at <Z-axis min>".
	Bugfix.

2017-03-23  Ethan A Merritt  <merritt@u.washington.edu>

	* src/qtterminal/QtGnuplotEvent.h src/qtterminal/QtGnuplotWindow.cpp:
	Event type GEPID was added between the 5.0.5 and 5.0.6 releases.
	It is used only by Windows, and only to allow space-raises-console.
	Adding it in the middle of the enum definition made gnuplot_qt built for
	5.0.6 incompatible with previous builds, so I moved GEPID to the highest
	defined enum value.  Unfortunately this broke the code in
	QtGnuplotEventHandler that treats any event type > GEDone as an error.
	So now we put it back in the middle of the enum definition but only
	define it for WIN32.

	Add a warning that GEDone must be the highest event type value defined.

2017-03-21  Craig DeForest  <zowie@users.sf.net>
